<resources>
    <string name="app_name">PartPartPartTimeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_event">Event</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_login">Login</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_login_applicant">Applicant Login</string>
    <string name="menu_login_compnay">Company Login</string>
    <string name="menu_register_applicant">Applicant Register</string>
    <string name="menu_register_compnay">Company Register</string>
    <string name="menu_register">Register</string>
    <string name="menu_profile_applicant">Applicant</string>
    <string name="menu_profile_company">Company</string>

    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="register">REGISTER</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="companyName">Company Name</string>

    <string name="partpartpartTime">Part Part Part Time</string>
    <string name="events">Events</string>
    <string name="training">Training / Educational</string>
    <string name="ptj">Part Time Job</string>
    <string name="profile">Profile</string>
    <string name="applicant">Applicant</string>
    <string name="company">Company</string>
    <string name="logout">Log Out</string>
    <string name="chooseimage">Choose Image</string>

    <string name="eventtt">Coming / Past Events</string>

    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="back">Back</string>

    <string name="rating">Rating</string>
    <string name="nameee">Name</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="experience">Experience</string>
    <string name="skill">Skill</string>
    <string name="education">Education</string>
    <string name="job">Job</string>

    <string name="login_success">Successfully Login!</string>
    <string name="login_failed">Invalid username or password!</string>

    <string name="get_failed">Invalid Company!</string>


    <string name="logout_success">Successfully Log Out!</string>

    <string name="applicants">All Applicants</string>
    <string name="user_id">User ID</string>

    <string name="companys">All Companies</string>
    <string name="company_id">Company ID</string>
    <string name="company_name">Company Name</string>

    <string name="add_event">Add New Event</string>

    <string name="event_id">Event ID</string>
    <string name="event_des">Event Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="searchjobcategor">Search Job Category</string>
    <string name="searchapplicantcategor">Search Applicant Category</string>
    <string name="jobcategory">Job Category</string>
    <string name="applicantcategory">Applicant Submit</string>
    <string name="search">Search</string>
    <string name="pthr">Find Applicant</string>
    <string name="btndislike">Dislike</string>
    <string name="btnlike">Like</string>
    <string name="comname">CompanyName</string>
    <string name="appname">ApplicantName</string>

</resources>
