<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_event" />
        <item
            android:id="@+id/trainings"
            android:icon="@drawable/ic_directions"
            android:title="@string/training" />
        <item
            android:id="@+id/profile_applicant"
            android:icon="@drawable/ic_friends"
            android:title="@string/menu_profile_applicant"
            android:visible="false" />
        <item
            android:id="@+id/profile_company"
            android:icon="@drawable/ic_account_balance"
            android:title="@string/menu_profile_company"
            android:visible="false" />

        <item
            android:id="@+id/login"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/signout"
            android:icon="@drawable/ic_signout"
            android:title="@string/menu_signout"
            android:visible="false" />
        <item
            android:id="@+id/register"
            android:icon="@drawable/ic_update"
            android:title="@string/menu_register" />


    </group>


</menu>
