<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.partpartparttime.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.partpartparttime.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.partpartparttime.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/login"
        android:name="com.example.partpartparttime.ui.login.Login"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login"/>
    <fragment
        android:id="@+id/register"
        android:name="com.example.partpartparttime.ui.register.Register"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register"/>
    <fragment
        android:id="@+id/events"
        android:name="com.example.partpartparttime.ui.events.events"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_events" />
</navigation>