<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.company_profile.companysssss" >

        <EditText
            android:id="@+id/textDescription2"
            android:layout_width="289dp"
            android:layout_height="36dp"
            android:layout_marginTop="44dp"
            android:enabled="false"
            android:hint="@string/description"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription1" />

        <EditText
            android:id="@+id/textDescription3"
            android:layout_width="289dp"
            android:layout_height="36dp"
            android:layout_marginTop="44dp"
            android:enabled="false"
            android:hint="@string/job"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription2" />

        <EditText
            android:id="@+id/textDescription1"
            android:layout_width="289dp"
            android:layout_height="36dp"
            android:layout_marginTop="224dp"
            android:enabled="false"
            android:hint="@string/address"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.278"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:hint="@string/contact"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toEndOf="@+id/imageViewPreview2"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <EditText
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:enabled="false"
            android:text="@string/nameee"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewPreview2"
            app:layout_constraintTop_toTopOf="@+id/imageViewPreview2" />

        <ImageView
            android:id="@+id/imageViewPreview2"
            android:layout_width="175dp"
            android:layout_height="166dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/no_image" />

        <EditText
            android:id="@+id/textEmaill"
            android:layout_width="146dp"
            android:layout_height="41dp"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.561"
            app:layout_constraintStart_toEndOf="@+id/imageViewPreview2"
            app:layout_constraintTop_toBottomOf="@+id/textDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="640dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add_whilte_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>